--- a/Matplotlib.ipynb
+++ b/Matplotlib.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# there are have all the scenarios about  matplotlib libeary of Python are.. \n",
+    "# All the scenarios about Matplotlib libeary of Python are.. \n",
     "# Matplotlib : Matplotlib is a popular data visualization library in Python \n",
     "\n",
     "# Matplotlib is a tool in Python that helps you draw charts and graphs. You can use it to visualize data so it's easier to understand.\n",
